--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Custom Journey Builder Activity</title>
+    <title>Wavy Message</title>
 
     <!-- JQuery version: 3.4.1 -->
     <script type="text/javascript" src="js/jquery.min.js"></script>
@@ -71,22 +71,7 @@
     <div id="glo-data-extension-warning"><span>Data extension not detected. Please configure the data extension before configuring activity.</span></div>
 
     <form id="glo-send-test-sms-form">
-        <fieldset>         
-            <div class="glo-checkbox">
-                <input type="checkbox" id="glo-is-tokenized-parameter" value="on"> <span> is tokenized?</span>
-            </div>
-            
-            <div class="glo-input">
-                Select your notification destination:
-                <select id="glo-destination-parameter">
-                    <option value="">Select an option</option>
-                    <option value="NEO">To NEO</option>
-                    <option value="Call Center">To Call Center</option>
-                    <option value="Call Center">To RED</option>
-                </select>
-            </div>
-            
-
+        <fieldset>                     
             <div class="glo-placeholder-list">
                 <span>Supported placeholders:</span>
                 <ul id="glo-placeholder-list"></ul>
